Add 2 new icons, update 1 icon
Add icons for A More Beautiful Journey and Burger Factory. Update icon for Avion Rewards.

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -704,6 +704,7 @@
 	<item component="ComponentInfo{ca.lapresse.android.lapressemobile/ca.lapresse.android.lapressemobile.StartupActivity}" drawable="la_presse" />
 	<item component="ComponentInfo{ca.libro.android/ca.libro.android.app.WebViewActivity}" drawable="libro" />
 	<item component="ComponentInfo{ca.markham.accessmarkhammobile/ca.markham.accessmarkhammobile.MainActivity}" drawable="access_markham" />
+	<item component="ComponentInfo{ca.mealsy.onlineordering.burgerfactory/crc64725d112ca099db26.MainActivity}" drawable="burger_factory" />
 	<item component="ComponentInfo{ca.metrolinx.triplinx/fr.cityway.product.presentation.view.activity.SplashScreenActivity}" drawable="triplinx" />
 	<item component="ComponentInfo{ca.mobile.explorer/crc64c7d70d841b4cd9a9.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{ca.mts.myaccount/ca.mts.myaccount.SplashActivity}" drawable="bell_mts_myaccount" />
@@ -8283,6 +8284,7 @@
 	<item component="ComponentInfo{com.remnote/com.remnote.MainActivity}" drawable="remnote" />
 	<item component="ComponentInfo{com.remotefairy4/com.remotefairy.StartActivity}" drawable="anymote" />
 	<item component="ComponentInfo{com.remotefairy/com.remotefairy.StartActivity}" drawable="anymote" />
+	<item component="ComponentInfo{com.remu.ambj/com.unity3d.player.UnityPlayerActivity}" drawable="a_more_beautiful_journey" />
 	<item component="ComponentInfo{com.renard.ocr/com.renard.ocr.MainActivity}" drawable="text_fairy" />
 	<item component="ComponentInfo{com.rendox.grocerygenius/com.rendox.grocerygenius.MainActivity}" drawable="grocerygenius" />
 	<item component="ComponentInfo{com.reneph.passwordsafe/com.reneph.passwordsafe.login.LoginActivity}" drawable="password_safe_manager" />
