--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,8 +4,11 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="a_more_beautiful_journey" />
 	<item drawable="credit_karma" />
 	<item drawable="atlas_obscura" />
+	<item drawable="avion_rewards" />
+	<item drawable="burger_factory" />
 	<item drawable="creators_app" />
 	<item drawable="dms_explorer" />
 	<item drawable="drinkit" />
@@ -90,6 +93,7 @@
 	<item drawable="auxio_alt_1" />
 	<item drawable="aves_gallery_alt_1" />
 	<item drawable="aves_gallery_alt_2" />
+	<item drawable="avion_rewards_alt_1" />
 	<item drawable="badoo_alt_1" />
 	<item drawable="bang_dream_alt_1" />
 	<item drawable="bank_id_alt_1" />
@@ -2187,6 +2191,7 @@
 	<item drawable="a_color_story" />
 	<item drawable="a_dance_of_fire_and_ice" />
 	<item drawable="a_dark_room" />
+	<item drawable="a_more_beautiful_journey" />
 	<item drawable="a_plus_gallery" />
 	<item drawable="a_slight_chance_of_sawblades" />
 	<item drawable="aa" />
@@ -3529,6 +3534,7 @@
 	<item drawable="bunpo" />
 	<item drawable="bunq" />
 	<item drawable="bura" />
+	<item drawable="burger_factory" />
 	<item drawable="burger_king" />
 	<item drawable="burger_party" />
 	<item drawable="burpy_walls" />
