add icons premium request

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -114,6 +114,7 @@
 	<item drawable="xposed_edge" />
 	<item drawable="ytdlnis" />
 	<item drawable="zipxtract" />
+	<item drawable="deprexis" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -4441,6 +4442,7 @@
 	<item drawable="deltec_bank" />
 	<item drawable="demorgen" />
 	<item drawable="depop" />
+	<item drawable="deprexis" />
 	<item drawable="deputy" />
 	<item drawable="der_die_das" />
 	<item drawable="der_standard_news" />
