--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9674,7 +9674,7 @@
 	<item component="ComponentInfo{com.sky.SkyEmu/com.sky.SkyEmu.EnhancedNativeActivity}" drawable="skyemu" />
 	<item component="ComponentInfo{com.skybet.app.skybet/com.skybet.app.skybet.ui.MainActivity}" drawable="sky_bet" />
 	<item component="ComponentInfo{com.skycash.beta/com.norbsoft.android.ease.activities.SplashScreenActivity}" drawable="skycash" />
-	<item component="ComponentInfo{com.skyd.anivu/com.skyd.anivu.ui.activity.MainActivity}" drawable="anivu" />
+	<item component="ComponentInfo{com.skyd.anivu/com.skyd.anivu.ui.activity.MainActivity}" drawable="podaura_alt_1" />
 	<item component="ComponentInfo{com.skyd.nightscreen/com.skyd.nightscreen.ui.activity.MainActivity}" drawable="nightscreen" />
 	<item component="ComponentInfo{com.skyd.raca/com.skyd.raca.ui.activity.MainActivity}" drawable="raca" />
 	<item component="ComponentInfo{com.skyd.rays/com.skyd.rays.ui.activity.MainActivity}" drawable="rays" />
