--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -243,6 +243,7 @@
 	<item drawable="youtify" />
 	<item drawable="ytdlnis" />
 	<item drawable="zipxtract" />
+	<item drawable="podaura" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1021,6 +1022,7 @@
 	<item drawable="plesk" />
 	<item drawable="pocketcasts_alt_1" />
 	<item drawable="pocketcasts_alt_2" />
+	<item drawable="podaura_alt_1" />
 	<item drawable="poe_alt_1" />
 	<item drawable="polar_flow_alt_1" />
 	<item drawable="portal_valve_alt_1" />
@@ -8991,6 +8993,7 @@
 	<item drawable="poco_launcher" />
 	<item drawable="poco_store" />
 	<item drawable="pococha" />
+	<item drawable="podaura" />
 	<item drawable="podbean" />
 	<item drawable="podcast_addict" />
 	<item drawable="podcast_go" />
