add/fix missing icons/compinfos

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -163,6 +163,7 @@
 	<item drawable="disconnect_alt_1" />
 	<item drawable="discord_alt_1" />
 	<item drawable="discord_alt_2" />
+	<item drawable="discord_bunny_alt_1" />
 	<item drawable="discover_alt_1" />
 	<item drawable="doom_alt_1" />
 	<item drawable="doordash_alt_1" />
@@ -535,7 +536,6 @@
 	<item drawable="hevy_alt_1" />
 	<item drawable="home_assistant_alt_1" />
 	<item drawable="homescapes_alt_1" />
-	<item drawable="homesnap" />
 	<item drawable="hotspot_shield_alt_1" />
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
@@ -553,7 +553,6 @@
 	<item drawable="innertune_alt_1" />
 	<item drawable="inoreader_alt_1" />
 	<item drawable="inshot_alt_1" />
-	<item drawable="insight_physics" />
 	<item drawable="instacart_alt_1" />
 	<item drawable="instacart_shopper_alt_1" />
 	<item drawable="instagram_alt_1" />
@@ -779,7 +778,7 @@
 	<item drawable="plato_alt_1" />
 	<item drawable="platzi_alt_1" />
 	<item drawable="playstation_alt_1" />
-	<item drawable="plesk" />
+	<item drawable="plesk_alt_1" />
 	<item drawable="pocketcasts_alt_1" />
 	<item drawable="pocketcasts_alt_2" />
 	<item drawable="podaura_alt_1" />
@@ -1318,6 +1317,7 @@
 	<item drawable="todoist_tangerine" />
 	<item drawable="tooly_alt_1" />
 	<item drawable="tower_of_fantasy_alt_1" />
+	<item drawable="traewelldroid_alt_1" />
 	<item drawable="transit_alt" />
 	<item drawable="transit_black" />
 	<item drawable="transit_blue" />
@@ -1348,7 +1348,6 @@
 	<item drawable="transit_yellow" />
 	<item drawable="translate_you_alt_1" />
 	<item drawable="transmission_remote_alt_1" />
-	<item drawable="trawelldroid_alt_1" />
 	<item drawable="triplinx_alt_1" />
 	<item drawable="trivago_alt_1" />
 	<item drawable="trivia_crack_alt_1" />
@@ -2320,7 +2319,7 @@
 	<item drawable="afk_arena" />
 	<item drawable="afk_journey" />
 	<item drawable="afl_live" />
-	<item drawable="afreecatv" />
+	<item drawable="afreerdp" />
 	<item drawable="after_focus" />
 	<item drawable="afterlight" />
 	<item drawable="afterpay" />
@@ -2544,7 +2543,6 @@
 	<item drawable="americanas_delivery" />
 	<item drawable="ameriprise_financial" />
 	<item drawable="amethyst" />
-	<item drawable="amex" />
 	<item drawable="amex_mobile" />
 	<item drawable="amigo" />
 	<item drawable="amino" />
@@ -2581,7 +2579,6 @@
 	<item drawable="android_hid_client" />
 	<item drawable="android_lost" />
 	<item drawable="android_miracast" />
-	<item drawable="android_owner" />
 	<item drawable="android_permissions" />
 	<item drawable="android_system_update" />
 	<item drawable="android_virtual_pen" />
@@ -2649,7 +2646,6 @@
 	<item drawable="animity" />
 	<item drawable="animlovers" />
 	<item drawable="anistream" />
-	<item drawable="anivu" />
 	<item drawable="anixart" />
 	<item drawable="aniyomi" />
 	<item drawable="aniyomi_preview" />
@@ -3131,6 +3127,7 @@
 	<item drawable="bbc_learning_english" />
 	<item drawable="bbc_media_player" />
 	<item drawable="bbc_news" />
+	<item drawable="bbc_sounds" />
 	<item drawable="bbc_sport" />
 	<item drawable="bbc_weather" />
 	<item drawable="bbdaily" />
@@ -4463,7 +4460,6 @@
 	<item drawable="disconnect_samsung" />
 	<item drawable="discord" />
 	<item drawable="discord_bunny" />
-	<item drawable="discord_bunny_alt1" />
 	<item drawable="discord_goth" />
 	<item drawable="discord_revenge" />
 	<item drawable="discover_killer" />
@@ -5615,9 +5611,8 @@
 	<item drawable="gravitybox" />
 	<item drawable="grayjay" />
 	<item drawable="great_clips" />
+	<item drawable="green_bitcoin_wallet" />
 	<item drawable="green_got" />
-	<item drawable="green_wallet" />
-	<item drawable="green_wallet_bitcoin" />
 	<item drawable="greenify" />
 	<item drawable="greenlight" />
 	<item drawable="greenstash" />
@@ -5810,7 +5805,6 @@
 	<item drawable="hero_lab_importer" />
 	<item drawable="heureka" />
 	<item drawable="hevy" />
-	<item drawable="hex" />
 	<item drawable="hex_hexified" />
 	<item drawable="hex_installer" />
 	<item drawable="hexpress" />
@@ -6755,7 +6749,6 @@
 	<item drawable="linkbox" />
 	<item drawable="linkdy" />
 	<item drawable="linked__in" />
-	<item drawable="linked_in" />
 	<item drawable="linkedin_learning" />
 	<item drawable="linkora" />
 	<item drawable="linksheet" />
@@ -6832,6 +6825,7 @@
 	<item drawable="lookout" />
 	<item drawable="looney_tunes" />
 	<item drawable="loop" />
+	<item drawable="loop_hex" />
 	<item drawable="loops" />
 	<item drawable="lorcana_tcg" />
 	<item drawable="lorex_home" />
@@ -7360,7 +7354,6 @@
 	<item drawable="mkaba" />
 	<item drawable="ml_manager" />
 	<item drawable="mlauncher" />
-	<item drawable="mlb" />
 	<item drawable="mlb_ballpark" />
 	<item drawable="mmrl" />
 	<item drawable="mobi_calc" />
@@ -7397,7 +7390,7 @@
 	<item drawable="moldiv" />
 	<item drawable="mole" />
 	<item drawable="molly" />
-	<item drawable="molotov" />
+	<item drawable="molotov_tv" />
 	<item drawable="momo" />
 	<item drawable="momo_root_checker" />
 	<item drawable="momup" />
@@ -7770,7 +7763,6 @@
 	<item drawable="nasa" />
 	<item drawable="nascar" />
 	<item drawable="nashe_radio" />
-	<item drawable="national_bank_of_canada" />
 	<item drawable="national_park_service" />
 	<item drawable="national_post" />
 	<item drawable="nationwide" />
@@ -9050,7 +9042,6 @@
 	<item drawable="quora" />
 	<item drawable="quotelockx" />
 	<item drawable="quotes" />
-	<item drawable="quran_indopak" />
 	<item drawable="quranly" />
 	<item drawable="qwant" />
 	<item drawable="qwotable" />
@@ -9732,6 +9723,7 @@
 	<item drawable="shell" />
 	<item drawable="shell_terminal" />
 	<item drawable="shelter" />
+	<item drawable="sherpa_tts" />
 	<item drawable="shift_tracker" />
 	<item drawable="shiftcal" />
 	<item drawable="shikho" />
@@ -10540,7 +10532,6 @@
 	<item drawable="taskito" />
 	<item drawable="taskrabbit" />
 	<item drawable="tasks" />
-	<item drawable="tasks_dot_org" />
 	<item drawable="tasks_to_do_list" />
 	<item drawable="tasky" />
 	<item drawable="tasty" />
@@ -10729,7 +10720,6 @@
 	<item drawable="tickertape" />
 	<item drawable="ticket_servicos" />
 	<item drawable="ticket_to_ride" />
-	<item drawable="ticket_to_tide" />
 	<item drawable="ticketek" />
 	<item drawable="ticketmaster" />
 	<item drawable="ticketnew" />
@@ -11897,7 +11887,6 @@
 	<item drawable="yandex_start" />
 	<item drawable="yandex_talk" />
 	<item drawable="yandex_tasks" />
-	<item drawable="yandex_taxi" />
 	<item drawable="yandex_team_calendar" />
 	<item drawable="yandex_telemost" />
 	<item drawable="yandex_tickets" />
