--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1481,7 +1481,7 @@
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.in/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex_mobile" />
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.mx/com.americanexpress.android.intl.app.view.activity.SplashActivity}" drawable="amex_mobile" />
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.mx/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex_mobile" />
-	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.nz/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex" />
+	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.nz/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex_mobile" />
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.uk/com.americanexpress.android.intl.app.view.activity.SplashActivity}" drawable="amex_mobile" />
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.uk/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex_mobile" />
 	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.us/com.americanexpress.android.acctsvcs.us.firstuse.StartupActivity}" drawable="amex_mobile" />
