add pwa icon #1101

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="phanpy" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -8570,6 +8571,7 @@
 	<item drawable="pewds" />
 	<item drawable="pga_tour" />
 	<item drawable="ph_viewer" />
+	<item drawable="phanpy" />
 	<item drawable="phantom" />
 	<item drawable="phenix" />
 	<item drawable="phhhoto" />
