--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -563,7 +563,7 @@
 	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.config.ui.ConfigLoadingActivity}" drawable="bbc_iplayer" />
 	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.StartupActivity}" drawable="bbc_iplayer" />
 	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.legacy.routing.LegacyRoutingActivity}" drawable="bbc_iplayer" />
-<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.routing.RoutingActivity}" drawable="bbc_iplayer" />
+	<item component="ComponentInfo{bbc.iplayer.android/uk.co.bbc.iplayer.startup.routing.RoutingActivity}" drawable="bbc_iplayer" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.app.TopLevelActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/bbc.mobile.news.v3.ui.splash.SplashActivity}" drawable="bbc_news" />
 	<item component="ComponentInfo{bbc.mobile.news.uk/uk.co.bbc.chrysalis.discovery.ui.signin.SplashActivity}" drawable="bbc_news" />
@@ -16519,4 +16519,6 @@
 	<item component="ComponentInfo{zombie.survival.craft.z/ru.kv3dunityext.permissions.MainActivity}" drawable="last_day_on_earth_survival" />
 	<item component="ComponentInfo{zte.com.cn.alarmclock/zte.com.cn.alarmclock.activity.AlarmClockActivity}" drawable="clock" />
 	<item component="ComponentInfo{zte.com.cn.filer/zte.com.cn.filer.FileMgrActivity}" drawable="file_manager" />
+	<item component="ComponentInfo{com.samsung.android.goodlock/com.samsung.android.goodlock.presentation.view.LaunchActivity}" drawable="samsung_good_lock" />
+	<item component="ComponentInfo{com.samsung.android.goodlock/com.samsung.android.goodlock.MainActivity}" drawable="samsung_good_lock" />
 </resources>
