Update pilipala componentinfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -5171,6 +5171,7 @@
 	<item component="ComponentInfo{com.gumtree.android/com.ebay.app.common.startup.SplashScreenActivity}" drawable="gumtree" />
 	<item component="ComponentInfo{com.gumtree.android/com.gumtree.android.splash.activity.SplashActivity}" drawable="gumtree" />
 	<item component="ComponentInfo{com.guozhigq.pilipala/com.ryanheise.audioservice.AudioServiceActivity}" drawable="pilipala" />
+	<item component="ComponentInfo{com.guozhigq.pilipala/com.guozhigq.pilipala.MainActivity}" drawable="pilipala" />
 	<item component="ComponentInfo{com.gustavoas.noti.dogfood/com.gustavoas.noti.SettingsActivity}" drawable="noti" />
 	<item component="ComponentInfo{com.gustavoas.noti/com.gustavoas.noti.SettingsActivity}" drawable="noti" />
 	<item component="ComponentInfo{com.gvt.minhagvt.enterprise/com.gvt.minhagvt.enterprise.MainActivity}" drawable="meu_vivo_fixo" />
