add icons, premium request

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -63,6 +63,7 @@
 	<item drawable="wonder_fridge" />
 	<item drawable="woot" />
 	<item drawable="zalando_prive" />
+	<item drawable="naver_chzzk" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -743,6 +744,7 @@
 	<item drawable="nagram_neon" />
 	<item drawable="nagram_niello" />
 	<item drawable="nationwide_alt_1" />
+	<item drawable="naver_chzzk_alt_1" />
 	<item drawable="naver_webtoon_alt_1" />
 	<item drawable="nbc_alt_1" />
 	<item drawable="neko_alt_1" />
