icon update: TELE2 RU (T2)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -1328,6 +1328,7 @@
 	<item drawable="tasks_alt_yellow" />
 	<item drawable="tata_play_alt_1" />
 	<item drawable="tele2_alt_1" />
+	<item drawable="tele2_ru_alt_1" />
 	<item drawable="telegram_alt_1" />
 	<item drawable="telegram_aqua" />
 	<item drawable="telegram_nox" />
@@ -10691,7 +10692,6 @@
 	<item drawable="telcel" />
 	<item drawable="telda" />
 	<item drawable="tele2_kz" />
-	<item drawable="tele2_ru" />
 	<item drawable="tele2_se" />
 	<item drawable="tele_quebec" />
 	<item drawable="telegraher" />
