--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -103,6 +103,7 @@
 	<item drawable="wooribank" />
 	<item drawable="woot" />
 	<item drawable="zalando_prive" />
+	<item drawable="eurosport" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -286,6 +287,7 @@
 	<item drawable="eternity_alt_1" />
 	<item drawable="eternium_alt_1" />
 	<item drawable="etitulobr_alt_1" />
+	<item drawable="eurosport_alt_1" />
 	<item drawable="every_door_alt_1" />
 	<item drawable="exodus_alt_1" />
 	<item drawable="fampay_alt_1" />
