--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -104,6 +104,7 @@
 	<item drawable="woot" />
 	<item drawable="zalando_prive" />
 	<item drawable="eurosport" />
+	<item drawable="maid" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -706,6 +707,7 @@
 	<item drawable="macrodroid_alt_1" />
 	<item drawable="macrodroid_alt_2" />
 	<item drawable="macrodroid_alt_3" />
+	<item drawable="maid_alt_1" />
 	<item drawable="mailchimp_alt_1" />
 	<item drawable="mastodon_alt_1" />
 	<item drawable="mastodon_alt_2" />
