--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12432,6 +12432,7 @@
 	<item component="ComponentInfo{de.sevenmind.android/de.sevenmind.android.MainActivity}" drawable="_7mind" />
 	<item component="ComponentInfo{de.shortdev.nearby_sharing_windows/crc649733edcd8ffd4bdd.MainActivity}" drawable="nearby_sharing_windows" />
 	<item component="ComponentInfo{de.shortdev.nearby_sharing_windows/crc642138225d2d50e687.MainActivity}" drawable="nearby_sharing_windows" />
+	<item component="ComponentInfo{de.shortdev.nearby_sharing_windows/crc64ce275a81cf289c94.MainActivity}" drawable="nearby_sharing_windows" />
 	<item component="ComponentInfo{de.simolation.subscriptionmanager/de.simolation.subscriptionmanager.ui.main.MainActivity}" drawable="abonnements" />
 	<item component="ComponentInfo{de.simon.dankelmann.bluetoothlespam.debug/de.simon.dankelmann.bluetoothlespam.MainActivity}" drawable="bluetooth_le_spam" />
 	<item component="ComponentInfo{de.simon.dankelmann.bluetoothlespam/de.simon.dankelmann.bluetoothlespam.MainActivity}" drawable="bluetooth_le_spam" />
@@ -14990,6 +14991,7 @@
 	<item component="ComponentInfo{org.joinmastodon.android/org.joinmastodon.android.MainActivity}" drawable="mastodon" />
 	<item component="ComponentInfo{org.jw.jwlibrary.mobile/org.jw.jwlibrary.mobile.MainActivity}" drawable="jw_library" />
 	<item component="ComponentInfo{org.jwz.android.xscreensaver/org.jwz.xscreensaver.Activity}" drawable="xscreensaver" />
+	<item component="ComponentInfo{org.jwz.xscreensaver/org.jwz.xscreensaver.Activity}" drawable="xscreensaver" />
 	<item component="ComponentInfo{org.kde.alligator/org.qtproject.qt5.android.bindings.QtActivity}" drawable="alligator" />
 	<item component="ComponentInfo{org.kde.bettercounter/org.kde.bettercounter.ui.MainActivity}" drawable="bettercounter" />
 	<item component="ComponentInfo{org.kde.kdeconnect_tp/org.kde.kdeconnect.UserInterface.MainActivity}" drawable="kde_connect" />
