--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="roblox" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -816,6 +817,7 @@
 	<item drawable="rimusic_alt_1" />
 	<item drawable="rimusic_alt_2" />
 	<item drawable="robinhood_alt_1" />
+	<item drawable="roblox_alt_1" />
 	<item drawable="runtastic_alt_1" />
 	<item drawable="safespace_alt_1" />
 	<item drawable="sagernet_alt_1" />
