add icons, premium request

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="roblox" />
+	<item drawable="weverse" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1392,6 +1393,7 @@
 	<item drawable="webmoney_keeper_alt_1" />
 	<item drawable="western_union_send_money_alt_1" />
 	<item drawable="wetransfer_alt_1" />
+	<item drawable="weverse_alt_1" />
 	<item drawable="whatlisten_alt_1" />
 	<item drawable="whoosh_sharing_alt_1" />
 	<item drawable="wifi_analyzer_alt_1" />
