--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3724,8 +3724,8 @@
 	<item component="ComponentInfo{com.drdisagree.colorblendr/com.drdisagree.colorblendr.ui.activities.SplashActivity}" drawable="colorblendr" />
 	<item component="ComponentInfo{com.drdisagree.conversa/com.drdisagree.conversa.MainActivity}" drawable="conversa" />
 	<item component="ComponentInfo{com.drdisagree.iconify.debug/com.drdisagree.iconify.SplashActivity}" drawable="iconify" />
-	<item component="ComponentInfo{com.drdisagree.iconify.foss/com.drdisagree.iconify.SplashActivity}" drawable="iconfiy" />
-<item component="ComponentInfo{com.drdisagree.iconify/com.drdisagree.iconify.SplashActivity}" drawable="iconify" />
+	<item component="ComponentInfo{com.drdisagree.iconify.foss/com.drdisagree.iconify.SplashActivity}" drawable="iconify" />
+	<item component="ComponentInfo{com.drdisagree.iconify/com.drdisagree.iconify.SplashActivity}" drawable="iconify" />
 	<item component="ComponentInfo{com.dreamhoundstudios.keyboard/com.dreamhoundstudios.keyboard.KeyboardActivity}" drawable="midi_keyboard" />
 	<item component="ComponentInfo{com.dreamon.kecil/com.dreamon.kecil.activities.SplashActivity}" drawable="kecil" />
 	<item component="ComponentInfo{com.dreamplug.androidapp/com.dreamplug.androidapp.SplashActivity}" drawable="cred" />
@@ -8399,7 +8399,7 @@
 	<item component="ComponentInfo{com.quora.android/com.quora.android.LauncherActivity}" drawable="quora" />
 	<item component="ComponentInfo{com.quora.android/com.quora.android.components.activities.LauncherActivity}" drawable="quora" />
 	<item component="ComponentInfo{com.ququplay.literaki/com.ququplay.literaki.MainActivity}" drawable="literaki" />
-	<item component="ComponentInfo{com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity}" drawable="al_quran_indopak" />
+	<item component="ComponentInfo{com.quran.labs.androidquran.naskh/com.quran.labs.androidquran.QuranDataActivity}" drawable="al_quran_indonesia" />
 	<item component="ComponentInfo{com.quran.labs.androidquran/com.quran.labs.androidquran.QuranDataActivity}" drawable="al_quran_indonesia" />
 	<item component="ComponentInfo{com.quranly.app/com.quranly.app.MainActivity}" drawable="quranly" />
 	<item component="ComponentInfo{com.qwant.liberty/com.qwant.android.qwantbrowser.MainActivity}" drawable="qwant" />
