--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6,6 +6,7 @@
 	<category title="New" />
 	<item drawable="roblox" />
 	<item drawable="weverse" />
+	<item drawable="superimage" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1229,6 +1230,7 @@
 	<item drawable="subtitle_viewer_alt_1" />
 	<item drawable="subway_tooter_alt_1" />
 	<item drawable="summoners_companion_alt_1" />
+	<item drawable="superimage_alt_1" />
 	<item drawable="swift__key_alt_1" />
 	<item drawable="swift_backup_alt_1" />
 	<item drawable="switchbuddy_alt_1" />
