icons update: VLC*

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -11562,8 +11562,8 @@
 	<item drawable="vkusvill" />
 	<item drawable="vlc" />
 	<item drawable="vlc_benchmark" />
+	<item drawable="vlc_freemote" />
 	<item drawable="vlc_nightly" />
-	<item drawable="vlcfreemote" />
 	<item drawable="vn" />
 	<item drawable="vnc_server" />
 	<item drawable="vnc_viewer" />
