--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7577,7 +7577,7 @@
 	<item component="ComponentInfo{com.nice.mobileapp/io.ionic.starter.MainActivity}" drawable="nice_gomobile" />
 	<item component="ComponentInfo{com.nicehash.metallum/com.nicehash.metallum.ui.activity.SplashActivity}" drawable="nicehash" />
 	<item component="ComponentInfo{com.nick.mowen.albatross/com.nick.mowen.albatross.main.MainActivity}" drawable="albatross" />
-	<item component="ComponentInfo{com.nicolasbrailo.vlcfreemote/com.nicolasbrailo.vlcfreemote.MainActivity}" drawable="vlcfreemote" />
+	<item component="ComponentInfo{com.nicolasbrailo.vlcfreemote/com.nicolasbrailo.vlcfreemote.MainActivity}" drawable="vlc_freemote" />
 	<item component="ComponentInfo{com.nicue.onetwo/com.nicue.onetwo.MainActivity}" drawable="onetwo" />
 	<item component="ComponentInfo{com.nightscoutpro.app/com.nightscoutpro.app.MainActivity}" drawable="nightscout_pro" />
 	<item component="ComponentInfo{com.nike.ntc/com.nike.ntc.onboarding.OnboardingSplashActivity}" drawable="nike_training_club" />
