icon rename: AOSP Mods -> Pixel Xpert

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -2744,7 +2744,6 @@
 	<item drawable="aol" />
 	<item drawable="aone" />
 	<item drawable="aora" />
-	<item drawable="aosp_mods" />
 	<item drawable="ap_mobile" />
 	<item drawable="apatch" />
 	<item drawable="apex_launcher" />
@@ -8821,6 +8820,7 @@
 	<item drawable="pixel_search" />
 	<item drawable="pixel_studio" />
 	<item drawable="pixel_wheels" />
+	<item drawable="pixel_xpert" />
 	<item drawable="pixeldroid" />
 	<item drawable="pixelfed" />
 	<item drawable="pixelify_gphotos" />
