--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -16190,10 +16190,10 @@
 	<item component="ComponentInfo{sh.ftp.rocketninelabs.meditationassistant.opensource/sh.ftp.rocketninelabs.meditationassistant.MainActivity}" drawable="meditation_assistant" />
 	<item component="ComponentInfo{sh.ppy.osulazer/crc64f3e94a995e5d9e96.OsuGameActivity}" drawable="osu" />
 	<item component="ComponentInfo{sh.ppy.osulazer/md59c875562ee5070384021e1e981f7bd4e.OsuGameActivity}" drawable="osu" />
-	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivity}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityNormalIcon}" drawable="aosp_mods" />
+	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivity}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityNormalIcon}" drawable="pixel_xpert" />
 	<item component="ComponentInfo{sh.whisper/sh.whisper.WMainActivity}" drawable="whisper" />
 	<item component="ComponentInfo{shadowkwgt.kustom.pack/shadowkwgt.kustom.pack.MainActivity}" drawable="shadow_kwgt" />
 	<item component="ComponentInfo{sharefiles.sharemusic.shareapps.filetransfer/com.inshot.filetransfer.SplashActivity}" drawable="inshare" />
