icon update: My MTS

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -696,6 +696,7 @@
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
+	<item drawable="mts_my_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
 	<item drawable="multi_calculator_alt_1" />
@@ -7747,7 +7748,6 @@
 	<item drawable="my_moon_phase" />
 	<item drawable="my_movies" />
 	<item drawable="my_mqtt" />
-	<item drawable="my_mts" />
 	<item drawable="my_nintendo" />
 	<item drawable="my_notes" />
 	<item drawable="my_nrma" />
