--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -699,7 +699,7 @@
 	<item component="ComponentInfo{by.a1.selfcare/com.tag.selfcare.tagselfcare.Launcher}" drawable="my_a1" />
 	<item component="ComponentInfo{by.green.tuber/by.green.tuber.MainActivity}" drawable="greentuber" />
 	<item component="ComponentInfo{by.lwo.oplati/by.lwo.oplati.base.MainActivity}" drawable="oplati" />
-	<item component="ComponentInfo{by.mts.client/ru.stream.mymts.MainActivity}" drawable="my_mts" />
+	<item component="ComponentInfo{by.mts.client/ru.stream.mymts.MainActivity}" drawable="mts_my_alt_1" />
 	<item component="ComponentInfo{by.st.priormobile/by.priorbank.authentication.splash.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{bz.zaa.mibudsm8/bz.zaa.mibudsm8.MiuiHeadsetActivity}" drawable="mi_buds_m8" />
 	<item component="ComponentInfo{ca.basira.mantooq/com.ryanheise.audioservice.AudioServiceActivity}" drawable="mantooq" />
@@ -7577,7 +7577,7 @@
 	<item component="ComponentInfo{com.nice.mobileapp/io.ionic.starter.MainActivity}" drawable="nice_gomobile" />
 	<item component="ComponentInfo{com.nicehash.metallum/com.nicehash.metallum.ui.activity.SplashActivity}" drawable="nicehash" />
 	<item component="ComponentInfo{com.nick.mowen.albatross/com.nick.mowen.albatross.main.MainActivity}" drawable="albatross" />
-	<item component="ComponentInfo{com.nicolasbrailo.vlcfreemote/com.nicolasbrailo.vlcfreemote.MainActivity}" drawable="vlcfreemote" />
+	<item component="ComponentInfo{com.nicolasbrailo.vlcfreemote/com.nicolasbrailo.vlcfreemote.MainActivity}" drawable="vlc_freemote" />
 	<item component="ComponentInfo{com.nicue.onetwo/com.nicue.onetwo.MainActivity}" drawable="onetwo" />
 	<item component="ComponentInfo{com.nightscoutpro.app/com.nightscoutpro.app.MainActivity}" drawable="nightscout_pro" />
 	<item component="ComponentInfo{com.nike.ntc/com.nike.ntc.onboarding.OnboardingSplashActivity}" drawable="nike_training_club" />
@@ -15911,7 +15911,7 @@
 	<item component="ComponentInfo{ru.mts.bank/ru.mts.money.activities.MainActivity}" drawable="mts_bank" />
 	<item component="ComponentInfo{ru.mts.mtstv/ru.mts.mtstv3.ui.MainActivity}" drawable="kion" />
 	<item component="ComponentInfo{ru.mts.music.android/ru.mts.music.ui.SplashActivity}" drawable="mts_music" />
-	<item component="ComponentInfo{ru.mts.mymts/ru.mts.core.ActivitySplash}" drawable="my_mts" />
+	<item component="ComponentInfo{ru.mts.mymts/ru.mts.core.ActivitySplash}" drawable="mts_my_alt_1" />
 	<item component="ComponentInfo{ru.mw/ru.mw.splashScreen.view.SplashScreenActivity}" drawable="qiwi_wallet" />
 	<item component="ComponentInfo{ru.myauchan.droid/crc6459f82684e172cd40.StartActivity}" drawable="auchan" />
 	<item component="ComponentInfo{ru.mybook/ru.mybook.ui.root.RootActivity}" drawable="mybook" />
@@ -16190,10 +16190,10 @@
 	<item component="ComponentInfo{sh.ftp.rocketninelabs.meditationassistant.opensource/sh.ftp.rocketninelabs.meditationassistant.MainActivity}" drawable="meditation_assistant" />
 	<item component="ComponentInfo{sh.ppy.osulazer/crc64f3e94a995e5d9e96.OsuGameActivity}" drawable="osu" />
 	<item component="ComponentInfo{sh.ppy.osulazer/md59c875562ee5070384021e1e981f7bd4e.OsuGameActivity}" drawable="osu" />
-	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivity}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon}" drawable="aosp_mods" />
-	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityNormalIcon}" drawable="aosp_mods" />
+	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivityNormalIcon}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.AOSPMods/sh.siava.AOSPMods.SettingsActivity}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon}" drawable="pixel_xpert" />
+	<item component="ComponentInfo{sh.siava.pixelxpert/sh.siava.pixelxpert.SplashScreenActivityNormalIcon}" drawable="pixel_xpert" />
 	<item component="ComponentInfo{sh.whisper/sh.whisper.WMainActivity}" drawable="whisper" />
 	<item component="ComponentInfo{shadowkwgt.kustom.pack/shadowkwgt.kustom.pack.MainActivity}" drawable="shadow_kwgt" />
 	<item component="ComponentInfo{sharefiles.sharemusic.shareapps.filetransfer/com.inshot.filetransfer.SplashActivity}" drawable="inshare" />
