--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -696,6 +696,7 @@
 	<item drawable="moelist_alt_1" />
 	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
+	<item drawable="mts_my_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
 	<item drawable="multi_calculator_alt_1" />
@@ -1481,6 +1482,23 @@
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
 	<item drawable="zimly_alt_1" />
+	<item drawable="swiggy_alt_1" />
+	<item drawable="reddit_alt_5" />
+	<item drawable="onesec_alt_1" />
+	<item drawable="mynoise_alt_1" />
+	<item drawable="myais_alt_1" />
+	<item drawable="lark_alt_1" />
+	<item drawable="hlb_connect_alt_1" />
+	<item drawable="gov_br_alt_1" />
+	<item drawable="global_icon_pack_alt_1" />
+	<item drawable="hermit_alt_1" />
+	<item drawable="german_dictionary_alt_1" />
+	<item drawable="day_off_alt_1" />
+	<item drawable="catalone2_alt_1" />
+	<item drawable="catalone_alt_1" />
+	<item drawable="annelids_alt_1" />
+	<item drawable="amnezia_wg_alt_1" />
+	<item drawable="alza_alt_1" />
 
 	<category title="Calendar" />
 	<item drawable="calendar" />
@@ -2546,7 +2564,6 @@
 	<item drawable="aluminium" />
 	<item drawable="always_on" />
 	<item drawable="alza" />
-	<item drawable="alza_alt_1" />
 	<item drawable="alzip" />
 	<item drawable="alzubda" />
 	<item drawable="am2r" />
@@ -2598,7 +2615,6 @@
 	<item drawable="amino" />
 	<item drawable="amnezia_vpn" />
 	<item drawable="amnezia_wg" />
-	<item drawable="amnezia_wg_alt_1" />
 	<item drawable="amoledpix" />
 	<item drawable="among_us" />
 	<item drawable="ampere" />
@@ -2706,7 +2722,6 @@
 	<item drawable="ankipro" />
 	<item drawable="anlinux" />
 	<item drawable="annelids" />
-	<item drawable="annelids_alt_1" />
 	<item drawable="another_notes" />
 	<item drawable="another_widget" />
 	<item drawable="anova" />
@@ -2744,7 +2759,6 @@
 	<item drawable="aol" />
 	<item drawable="aone" />
 	<item drawable="aora" />
-	<item drawable="aosp_mods" />
 	<item drawable="ap_mobile" />
 	<item drawable="apatch" />
 	<item drawable="apex_launcher" />
@@ -3768,8 +3782,7 @@
 	<item drawable="cataclysm_dda_x" />
 	<item drawable="catalone" />
 	<item drawable="catalone2" />
-	<item drawable="catalone2_alt_1" />
-	<item drawable="catalone_alt_1" />
+
 	<item drawable="catawiki" />
 	<item drawable="catcode" />
 	<item drawable="cathode" />
@@ -4361,7 +4374,6 @@
 	<item drawable="dawdle" />
 	<item drawable="dawn_for_reddit" />
 	<item drawable="day_off" />
-	<item drawable="day_off_alt_1" />
 	<item drawable="day_one" />
 	<item drawable="daydream" />
 	<item drawable="dayforce" />
@@ -5558,7 +5570,6 @@
 	<item drawable="geoportail" />
 	<item drawable="george_bank" />
 	<item drawable="german_dictionary" />
-	<item drawable="german_dictionary_alt_1" />
 	<item drawable="gesetze_jura" />
 	<item drawable="get_mobile" />
 	<item drawable="getapps" />
@@ -5609,7 +5620,6 @@
 	<item drawable="glitch_lab" />
 	<item drawable="glo_lottery" />
 	<item drawable="global_icon_pack" />
-	<item drawable="global_icon_pack_alt_1" />
 	<item drawable="globeone" />
 	<item drawable="globible" />
 	<item drawable="globoplay" />
@@ -5672,7 +5682,6 @@
 	<item drawable="gotube" />
 	<item drawable="gotyme" />
 	<item drawable="gov_br" />
-	<item drawable="gov_br_alt_1" />
 	<item drawable="govee_home" />
 	<item drawable="gps_joystick" />
 	<item drawable="gps_locker" />
@@ -5903,7 +5912,6 @@
 	<item drawable="hermes" />
 	<item drawable="hermes_paket" />
 	<item drawable="hermit" />
-	<item drawable="hermit_alt_1" />
 	<item drawable="hero_app" />
 	<item drawable="hero_lab_importer" />
 	<item drawable="heureka" />
@@ -5947,7 +5955,6 @@
 	<item drawable="hive_social" />
 	<item drawable="hk_transport" />
 	<item drawable="hlb_connect" />
-	<item drawable="hlb_connect_alt_1" />
 	<item drawable="hltv" />
 	<item drawable="hmrc" />
 	<item drawable="ho" />
@@ -6676,7 +6683,6 @@
 	<item drawable="lapa" />
 	<item drawable="lapse" />
 	<item drawable="lark" />
-	<item drawable="lark_alt_1" />
 	<item drawable="lark_player" />
 	<item drawable="larnu" />
 	<item drawable="last__pass" />
@@ -7748,7 +7754,6 @@
 	<item drawable="my_moon_phase" />
 	<item drawable="my_movies" />
 	<item drawable="my_mqtt" />
-	<item drawable="my_mts" />
 	<item drawable="my_nintendo" />
 	<item drawable="my_notes" />
 	<item drawable="my_nrma" />
@@ -7777,7 +7782,6 @@
 	<item drawable="my_workout_plan" />
 	<item drawable="myaakash" />
 	<item drawable="myais" />
-	<item drawable="myais_alt_1" />
 	<item drawable="myandroidtools" />
 	<item drawable="myanimelist" />
 	<item drawable="myaussie" />
@@ -7826,7 +7830,6 @@
 	<item drawable="myne" />
 	<item drawable="mynetdiary" />
 	<item drawable="mynoise" />
-	<item drawable="mynoise_alt_1" />
 	<item drawable="myntra" />
 	<item drawable="mynumber_card_check_app" />
 	<item drawable="myoffice_documents" />
@@ -8353,7 +8356,6 @@
 	<item drawable="onekeepass" />
 	<item drawable="onepiece_treasure_cruise" />
 	<item drawable="onesec" />
-	<item drawable="onesec_alt_1" />
 	<item drawable="oneshot" />
 	<item drawable="onespan" />
 	<item drawable="onetwo" />
@@ -8821,6 +8823,7 @@
 	<item drawable="pixel_search" />
 	<item drawable="pixel_studio" />
 	<item drawable="pixel_wheels" />
+	<item drawable="pixel_xpert" />
 	<item drawable="pixeldroid" />
 	<item drawable="pixelfed" />
 	<item drawable="pixelify_gphotos" />
@@ -9333,7 +9336,6 @@
 	<item drawable="redbus" />
 	<item drawable="reddcoin" />
 	<item drawable="reddit" />
-	<item drawable="reddit_alt_5" />
 	<item drawable="reddit_is_fun" />
 	<item drawable="redditoria" />
 	<item drawable="reddoorz" />
@@ -10588,7 +10590,6 @@
 	<item drawable="swift_installer" />
 	<item drawable="swiftbackupprem" />
 	<item drawable="swiggy" />
-	<item drawable="swiggy_alt_1" />
 	<item drawable="swile" />
 	<item drawable="swipe" />
 	<item drawable="swipe_navigation" />
@@ -11562,8 +11563,8 @@
 	<item drawable="vkusvill" />
 	<item drawable="vlc" />
 	<item drawable="vlc_benchmark" />
+	<item drawable="vlc_freemote" />
 	<item drawable="vlc_nightly" />
-	<item drawable="vlcfreemote" />
 	<item drawable="vn" />
 	<item drawable="vnc_server" />
 	<item drawable="vnc_viewer" />
