--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -57,11 +57,13 @@
 	<item drawable="wongi_weather" />
 	<item drawable="woowa_brothers_delivery" />
 	<item drawable="x_saver" />
+	<item drawable="abc_news" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
 	<item drawable="_4pda_alt_1" />
 	<item drawable="_10_bit_clock_widget_alt_1" />
+	<item drawable="abc_news_alt_1" />
 	<item drawable="abi_a_robots_tale_alt_1" />
 	<item drawable="ac__display_alt_1" />
 	<item drawable="ace_attorney_investigations_alt_1" />
