--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -8836,7 +8836,7 @@
 	<item drawable="pirate_solitaire" />
 	<item drawable="pitch_black_wallpaper" />
 	<item drawable="piwigo" />
-	<item drawable="pix_material_you" />
+	<item drawable="pix_material_you_light_dark" />
 	<item drawable="pixabay" />
 	<item drawable="pixbit" />
 	<item drawable="pixel_brush" />
