--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8025,7 +8025,7 @@
 	<item component="ComponentInfo{com.particlenews.newsbreak/com.particlemedia.ui.guide.UserGuideActivity}" drawable="newsbreak" />
 	<item component="ComponentInfo{com.particlesdevs.photoncamera/com.particlesdevs.photoncamera.ui.SplashActivity}" drawable="photon_camera" />
 	<item component="ComponentInfo{com.partiful.partiful/com.partiful.partiful.MainActivity}" drawable="partiful" />
-	<item component="ComponentInfo{com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.SplashActivity}" drawable="pix_material_you" />
+	<item component="ComponentInfo{com.pashapuma.pix.material.you.dark/com.pashapuma.pix.material.you.dark.activities.SplashActivity}" drawable="pix_material_you_light_dark" />
 	<item component="ComponentInfo{com.pashapuma.pix.wallpapers/com.pashapuma.pix.wallpapers.MainActivity}" drawable="wallsplash" />
 	<item component="ComponentInfo{com.passesalliance.wallet/com.passesalliance.wallet.activity.MainActivityEx}" drawable="pass_two_u" />
 	<item component="ComponentInfo{com.passportparking.mobile.toronto/com.passportparking.mobile.TorontoApp}" drawable="toronto_green_p" />
