--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -82,6 +82,7 @@
 	<item drawable="wongi_weather" />
 	<item drawable="woowa_brothers_delivery" />
 	<item drawable="x_saver" />
+	<item drawable="zappka" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1538,6 +1539,7 @@
 	<item drawable="youtube_vanced_alt_3" />
 	<item drawable="youtube_vanced_alt_4" />
 	<item drawable="ytdlnis_alt_1" />
+	<item drawable="zappka_alt_1" />
 	<item drawable="zattoo_alt_1" />
 	<item drawable="zello_alt_1" />
 	<item drawable="zimly_alt_1" />
