--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -120,6 +120,8 @@
 	<item drawable="woowa_brothers_delivery" />
 	<item drawable="x_saver" />
 	<item drawable="zappka" />
+	<item drawable="tuta_calendar" />
+	<item drawable="tutanota" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1501,7 +1503,9 @@
 	<item drawable="turbo_dismount_alt_1" />
 	<item drawable="turn_up_alt_1" />
 	<item drawable="tusky_alt_1" />
+	<item drawable="tuta_calendar_alt_1" />
 	<item drawable="tutanota_alt_1" />
+	<item drawable="tutanota_alt_2" />
 	<item drawable="twitch_alt_1" />
 	<item drawable="twitter_alt_1" />
 	<item drawable="twitter_alt_2" />
