--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="ente" />
+	<item drawable="ente_auth" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -191,6 +193,8 @@
 	<item drawable="edem_rf_alt_2" />
 	<item drawable="edusign_intervenant_alt_1" />
 	<item drawable="elements_kwgt_alt_1" />
+	<item drawable="ente_alt_1" />
+	<item drawable="ente_auth_alt_1" />
 	<item drawable="eternity_alt_1" />
 	<item drawable="eternium_alt_1" />
 	<item drawable="etitulobr_alt_1" />
