--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -410,4 +410,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="Benjamin Ewe"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/184654065"
+        link="https://github.com/BenjaminEwe" />
 </resources>
